Fix nav button spacing

--- a/styles/project.css
+++ b/styles/project.css
@@ -53,7 +53,7 @@
     flex-direction: column;
     gap: 30px;
 
-    margin-bottom: 50px;
+    margin-bottom: 300px;
 }
 
 .project h2::before {
